--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
                 <li>Land Preparation for Farming or Development</li>
                 <li>Invasive Species Removal</li>
                 <li>Trail and Path Clearing</li>
+                <li>Gravel Driveways New or Repair</li>
             </ul>
-            <p>Pricing: $125-$300/hour or $400-$800/acre. Free quotes available!</p>
+            <p>Pricing: $200-$300/hour or $500-$800/acre. Free quotes available!</p>
         </div>
         <div class="section">
             <h2>Contact Us</h2>
             <p>Email: info@bushwhackersllp.com</p>
-            <p>Phone: (555) 123-4567</p>
+            <p>Phone: (319) 677-6727</p>
             <p>Location: Iowa</p>
         </div>
     </div>
@@ -44,4 +45,5 @@
         <p>&copy; 2025 Bush Whackers, LLP. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
